--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -34,7 +34,6 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
-          cache-dependency-path: "./pages/package-lock.json"
       - name: "Install dependencies"
         run: "npm install"
       - name: "Build pages"
@@ -44,7 +43,7 @@ jobs:
       - name: "Upload artifact"
         uses: "actions/upload-pages-artifact@v2"
         with:
-          path: "./pages/build"
+          path: "./build"
       - name: "Deploy to GitHub Pages"
         id: "deployment"
         uses: "actions/deploy-pages@v2"
